--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,40 @@
 * {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: rgb(234, 234, 234);
+    background-color: rgb(216, 190, 190);
   }
   
   body {
     padding: 60px;
   }
-  
+
+  form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   input {
     background-color: white;
-    border-radius: 5px;
+    border-radius: 3px;
     border: 1px solid rgb(97, 32, 158);
-    color: black;
     font-size: 1.2rem;
     outline: none;
-    padding: 10px 15px;
+    padding: 10px 20px;
     width: 100%;
+  }
+
+  h1{
+    font-size: 2.5em;
+    text-align: center;
   }
   
   h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
   
   h3 {
-    font-size: 3rem;
-    margin-bottom: 5px;
+    font-size: 2rem;
+    margin-bottom: 18px;
   }
   
   .card-grid {
@@ -47,14 +57,15 @@
     margin-bottom: 20px;
     margin-right: 20px;
     overflow: hidden;
+    width: 30%;
   }
-  
+
   .card p {
     background-color: white;
     flex: 1;
-    font-size: 1.5rem;
+    font-size: 0.9rem;
     margin-top: 5px;
-    padding: 5px 20px 0px 20px;
+    padding: 10px 20px 0px 20px;
     text-align: center;
   }
   
